--- a/courHTML.html
+++ b/courHTML.html
@@ -27,6 +27,16 @@
                 <!--<p class="texte-cache">Forum</p>-->
             </div>
         </header>
+        <nav>
+            <h1>HTML</h1>
+            <ul>
+                <li>Structure de base d'une page HTML</li>
+                <li>Les balises HTML</li>
+                <li>Les attributs</li>
+                <li>Les Formulaires</li>
+                <li>Les Tables</li>
+            </ul>
+        </nav>
         <main>
             <div id="intro">
                 <h1>Introduction a l'HTML</h1>
@@ -34,7 +44,7 @@
             </div>
             <div id="base">
                 <h2>1. Structure de base d'une page HTML</h2>
-                <p>Chaque document HTML commence par une déclaration de type (<pre><code>&lt;!DOCTYPE html&gt;</code></pre>) qui indique au navigateur que nous utilisons HTML5. Voici la structure de base d'une page HTML :</p>
+                <p>Chaque document HTML commence par une déclaration de type :<pre><code>&lt;!DOCTYPE html&gt;</code></pre> Cette déclaration indique au navigateur que nous utilisons HTML5. Voici la structure de base d'une page HTML :</p>
                 <pre><code>
                     &lt;!DOCTYPE html&gt;
                     &lt;html&gt;
