--- a/Acceuil.html
+++ b/Acceuil.html
@@ -23,7 +23,7 @@
             <div id="font">
                 <a href="./index.html"><i class="fa-solid fa-house fa-2x"></i></a>
                 <!--<p class="texte-cache">Acceuile</p>-->
-                <a href="#"><i class="fa-solid fa-comment fa-2x"></i></a>
+                <a href="https://discord.gg/wurwkyGq" target="_blank"><i class="fa-brands fa-discord fa-2x"></i></a>
                 <!--<p class="texte-cache">Forum</p>-->
             </div>
         </header>
@@ -69,22 +69,22 @@
                 </table>
             </div>
         </div>
-        <div id="tp">
+        <!--<div id="tp">
             <h1 class="title">Nos travaux pratiques : </h1>
             <div class="table">
                 <table>
                     <thead>
-                        <tr>
+                        <tr >
                         <th>Projets</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr class="trTp">
                             <td><a href="./siteEnTravaux.html">Créer un site web</a></td>
                             <td>HTML / CSS / JavaScriptS</td>
                             <td><i class="fa-solid fa-computer fa-2x"></i></td>
                         </tr>
-                        <tr>
+                        <tr class="trTp">
                             <td><a href="./siteEnTravaux.html">Créer un jeu d'echec</a></td>
                             <td>Python</td>
                             <td><i class="fa-solid fa-chess fa-2x"></i></td>
@@ -92,7 +92,7 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+        </div>-->
         <footer>
             <nav>
                 <a href="./Apropos.html">a propos</a>
