--- a/MeContacter.html
+++ b/MeContacter.html
@@ -26,7 +26,7 @@
             <div id="font">
                 <a href="./index.html"><i class="fa-solid fa-house fa-2x"></i></a>
                 <!--<p class="texte-cache">Acceuile</p>-->
-                <a href="#"><i class="fa-solid fa-comment fa-2x"></i></a>
+                <a href="https://discord.gg/wurwkyGq" target="_blank"><i class="fa-brands fa-discord fa-2x"></i></a>
                 <!--<p class="texte-cache">Forum</p>-->
             </div>
         </header>
