--- a/Acceuil.html
+++ b/Acceuil.html
@@ -58,7 +58,7 @@
                             <td><i class="fa-brands fa-css3-alt fa-2x"></i></td>
                         </tr>
                         <tr>
-                            <td><a href="./siteEnTravaux.html">JavaScript</a></td>
+                            <td><a href="./courJS.html">JavaScript</a></td>
                             <td><i class="fa-brands fa-js fa-2x"></i></td>
                         </tr>
                         <tr>
