--- a/courJS.html
+++ b/courJS.html
@@ -323,6 +323,10 @@
                     </pre>
 
                 </div>
+                <div id=""></div>
+                <div id=""></div>
+                <div id=""></div>
+                <div id=""></div>
             </div>
         </main>
         <footer>
