--- a/courHTML.html
+++ b/courHTML.html
@@ -10,6 +10,7 @@
 
         <!--lien vers les page css-->
         <link rel="stylesheet" type="text/css" href="./css/courHTML.css">
+        <link rel="stylesheet" type="text/css" href="./css/courPourTel.css">
         
         <!--lien vers le js-->
         <script src="https://kit.fontawesome.com/d84e16f660.js" crossorigin="anonymous"></script>
