--- a/Acceuil.html
+++ b/Acceuil.html
@@ -54,7 +54,7 @@
                             <td><i class="fa-brands fa-html5 fa-2x"></i></td>
                         </tr>
                         <tr>
-                            <td><a href="./siteEnTravaux.html">CSS</a></td>
+                            <td><a href="./courCSS.html">CSS</a></td>
                             <td><i class="fa-brands fa-css3-alt fa-2x"></i></td>
                         </tr>
                         <tr>
@@ -62,9 +62,13 @@
                             <td><i class="fa-brands fa-js fa-2x"></i></td>
                         </tr>
                         <tr>
+                            <td><a href="./siteEnTravaux.html">Java</a></td>
+                            <td><i class="fa-brands fa-java fa-2x"></i></td>
+                        </tr>
+                        <!--<tr>
                             <td><a href="./siteEnTravaux.html">Python</a></td>
                             <td><i class="fa-brands fa-python fa-2x"></i></td>
-                        </tr>
+                        </tr>-->
                     </tbody>
                 </table>
             </div>
