--- a/courJS.html
+++ b/courJS.html
@@ -85,7 +85,7 @@
                             &lt;h1&gt;Bonjour, Monde !&lt;/h1&gt;
                             &lt;button&gt; onclick="saluer()"&gt;Cliquez-moi&lt;/button&gt;
 
-                            &lt;script&gt;&gt;
+                            &lt;script&gt;
                                 function saluer() {
                                     alert('Bonjour à tous!');
                                 }
@@ -406,6 +406,7 @@
                     <p>Dans cet exemple, async et await sont utilisés pour gérer les opérations asynchrones de manière synchronisée, ce qui rend le code plus facile à lire et à comprendre.</p>
                 </div>
             </div>
+            <p>En conclusion, JavaScript est un langage de programmation puissant et polyvalent, essentiel pour le développement web moderne. Il permet de créer des expériences utilisateur interactives et dynamiques, d'optimiser la fonctionnalité des sites web et de gérer les comportements côté client. Tout au long de ce cours, vous avez découvert les fondamentaux de JavaScript, de la syntaxe de base aux concepts avancés comme les objets, les fonctions, et les événements. En maîtrisant JavaScript, vous serez en mesure de concevoir des applications web robustes et réactives qui répondent aux attentes élevées des utilisateurs contemporains. Continuez à pratiquer, explorer de nouvelles bibliothèques et frameworks, et restez curieux. Le monde du développement JavaScript est vaste et en constante évolution, offrant toujours de nouvelles opportunités d'apprentissage et d'innovation.</p>
         </main>
         <footer>
             <nav>
